[Bug 623985] Line break on the "free download" button
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk@80556 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/content.css
+++ b/style/covehead/content.css
@@ -352,7 +352,7 @@ ul.home-download li a.download-link span.download-info em {
 	z-index: 9;
 }
 
-#download ul.home-download {
+* html #download ul.home-download {
     width: 330px;
 }
 
